--- a/SAF.Web/Views/Solicitud/_experiencia.cshtml
+++ b/SAF.Web/Views/Solicitud/_experiencia.cshtml
@@ -83,7 +83,12 @@
 }
 <script type="text/javascript" language="javascript">
     $("#nombreArchivoExp").fileInput({ file: $("#codArchivoExp").val(), fileName: "archivoExpFile", ctrlCleanDelete: ["codArchivoExp"] });
-    $("#btnGuardarExperiencia").click(function () { $("#frmRegistroExperiencia").submit(); });
+    $("#btnGuardarExperiencia").click(function () {
+        $("#frmRegistroExperiencia").updateValidation();
+        if ($("#frmRegistroExperiencia").isValid()){
+            $("#frmRegistroExperiencia").submit();
+        }
+    });
     $("#iRegistroExperiencia").load(function () {
         var resultText = $("#iRegistroExperiencia").contents().find('body').html();
         if (resultText == "") return;
