--- a/SAF.Web/Views/Shared/_PageHeader.cshtml
+++ b/SAF.Web/Views/Shared/_PageHeader.cshtml
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav">
                 <!-- Messages: style can be found in dropdown.less-->
                 <li class="dropdown messages-menu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <a href='@Url.Action("Bandeja", "Notificacion", new { Area = "" })' class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-envelope-o"></i>
                         <span class="label label-success" id="contadorNotificacion">0</span>
                     </a>
