--- a/SAF.Web.Intranet/Views/SolicitudAdmin/revisarSolicitudSOA.cshtml
+++ b/SAF.Web.Intranet/Views/SolicitudAdmin/revisarSolicitudSOA.cshtml
@@ -196,7 +196,8 @@
             $("#btnObservarInfoSoaSolicitud").click(observarSolicitudSOA);
             $("#btnAceptarInfoSoaSolicitud").click(function () {
                 bootbox.confirm(parametros.general.mensajeConfirmacion, function (result) {
-                    aceptarSolicitudSOA();
+                    if(result)
+                        aceptarSolicitudSOA();
                 });
             });
             $("#btnRegresar").click(regresar);
