--- a/SAF.Web/Views/Propuesta/VerPropuesta.cshtml
+++ b/SAF.Web/Views/Propuesta/VerPropuesta.cshtml
@@ -292,6 +292,16 @@
 </div>
 
 <div class="modal fade" id="modalAsignaFechasAuditor" tabindex="-1" role="dialog" aria-hidden="true"></div>
+<div class="modal fade" id="modalGanttAuditoria" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> × </button>
+            </div>
+            <div id="cntGanttAuditoria" class="modal-body"></div>
+        </div>
+    </div>
+</div>
 
 @section scripts {
 
@@ -303,6 +313,7 @@
 
         $("#nombreArchivoFirmaInternacional").fileInput({ file: $("#codArchivoFirmaInternacional").val(), fileName: "archivoFirmaInternacional", ctrlCleanDelete: ["codArchivoFirmaInternacional"] });
         $("#nombreArchivoFirmaPCAOB").fileInput({ file: $("#codArchivoFirmaPCAOB").val(), fileName: "archivoFirmaPCAOB", ctrlCleanDelete: ["codArchivoFirmaPCAOB"] });
+        $('#modalGanttAuditoria').on('hidden.bs.modal', function () { $("#cntGanttAuditoria").empty(); });
 
         $("#iRegistroSustentoAdicional").load(function () {
             var resultText = $("#iRegistroSustentoAdicional").contents().find('body').html();
@@ -335,7 +346,15 @@
                     }
                 },
                 { "sTitle": "Periodo" },
-                { "sTitle": "Entidad" }
+                { "sTitle": "Entidad" },
+                {
+                    "bSortable": false,
+                    "sClass": "center",
+                    "sWidth": "5%",
+                    "render": function (data, type, row) {
+                        return '<center><button class="btn btn-warning" title="Gantt Equipo" type="button" onclick="popupGanttAuditoria(' + row[0] + ');"><i class="fa fa-calendar"></i></button></center>';
+                    }
+                },
             ]
         });
 
@@ -463,7 +482,31 @@
                     mostrarNotificacion(result);
                 }
             });
-        }
+        };
+
+        function popupGanttAuditoria(id) {
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("ObtenerGanttAuditoria", "Propuesta")',
+                data: { id: id },
+                success: function (result) {
+                    $("#cntGanttAuditoria").gantt({
+                        source: result,
+                        navigate: "scroll",
+                        maxScale: "hours",
+                        itemsPerPage: 10
+                    });
+                    /*$(".gantt").popover({
+                        selector: ".bar",
+                        title: "I'm a popover",
+                        content: "And I'm the content of said popover.",
+                        trigger: "hover"
+                    });*/
+                    $("#modalGanttAuditoria").modal();                    
+                    prettyPrint();
+                }
+            });
+        };
 
     </script>
 }
