--- a/SAF.Web.Intranet/Areas/Publicacion/Views/Evaluador/Publicacion.cshtml
+++ b/SAF.Web.Intranet/Areas/Publicacion/Views/Evaluador/Publicacion.cshtml
@@ -39,6 +39,7 @@
                                         <i class="fa fa-calendar bigger-110"></i>
                                     </span>
                                 </div>
+                                @Html.ValidationMessageFor(c => c.FechaMaximaPublicacionConcurso)
                             </div>
                         </div>
                     </div>
@@ -53,6 +54,7 @@
                                         <i class="fa fa-calendar bigger-110"></i>
                                     </span>
                                 </div>
+                                @Html.ValidationMessageFor(c => c.FechaMaximaCreacionConsulta)
                             </div>
                             <div class="col-md-6">
                                 @Html.LabelFor(c => c.FechaMaximaResponderConsultas)
@@ -62,6 +64,7 @@
                                         <i class="fa fa-calendar bigger-110"></i>
                                     </span>
                                 </div>
+                                @Html.ValidationMessageFor(c => c.FechaMaximaResponderConsultas)
                             </div>
                         </div>
                     </div>
@@ -77,6 +80,7 @@
                                         <i class="fa fa-calendar bigger-110"></i>
                                     </span>
                                 </div>
+                                @Html.ValidationMessageFor(c => c.FechaMaximaPresentacionPropuestas)
                             </div>
                         </div>
                     </div>
@@ -144,7 +148,7 @@
                 if (result) {
                     $.ajax({
                         type: "POST",
-                        url: '@Url.Action("grabarRegistroSolicitudSOA", "Evaluador", new { Area = "Publicacion" })',
+                        url: '@Url.Action("GrabarPublicacion", "Evaluador", new { Area = "Publicacion" })',
                         data: $("#frmRegistroPublicacion").serialize(),
                         dataType: "json",
                         success: function (result) {
